# bendage

./: CMakeLists.txt  README.md  addon.json  release.sh  score_addon_bendage.cpp  score_addon_bendage.hpp
.github/workflows/: jit.yml
Bendage/: JiPeg.cpp  JiPeg.hpp  SafeWord.cpp  SafeWord.hpp  Xlippy.cpp  Xlippy.hpp  jpeg_decoder.h  toojpeg.cpp  toojpeg.h
